# postara

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.postgres.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
config/: courier.toml.example  postara.toml.example
docs/: agent-api.md  mcp-server.md
frontend/dist-site/: index.html
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_user_workspace.py  0003_account_user_email_unique.py  0004_api_key_scopes.py  0005_mailbox_auth_methods.py  0006_mailbox_api_name_unique.py  0007_auth_attempt_buckets.py  0008_mailbox_health.py
scripts/: backup.sh  docker-entrypoint.sh  postara-entrypoint.sh  run_local.sh  smoke_docker.sh
src/courier/: accounts.py  api.py  config.py  database.py  imap_executor.py  mailbox.py  repositories.py  secrets.py  security.py  users.py  (+1 more)
tests/: helpers.py  test_account_api.py  test_account_service.py  test_api.py  test_audit.py  test_auth_protection.py  test_config.py  test_container_packaging.py  test_credentials_runtime.py  test_database.py  test_gmail_adapter.py  test_imap_executor.py  test_local_run_script.py  test_mailbox_auth_methods_api.py  test_mailbox_runtime.py  test_mcp_client.py  test_mcp_tools.py  test_message_api.py  test_models.py  test_oauth_state.py  test_owner_api.py  test_pending_mailbox_verifications.py  test_provider_contract.py  test_provider_registry.py  test_repositories.py  test_secrets.py  test_security.py  test_user_auth_api.py  test_user_workspace_api.py  test_web_ui.py
(+39 files in other folders)
