[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postara"
version = "0.1.0"
description = "Multi-tenant IMAP-to-HTTP gateway"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "imap-tools>=1.10.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
